zerocopy-derive/tests/ui-msrv/enum.stderr
error: unrecognized representation hint
  --> $DIR/enum.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> $DIR/enum.rs:23:8
   |
23 | #[repr(foo)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on an enum
  --> $DIR/enum.rs:31:8
   |
31 | #[repr(transparent)]
   |        ^^^^^^^^^^^

error: conflicting representation hints
  --> $DIR/enum.rs:38:1
   |
38 | #[repr(u8, u16)]
   | ^

error: must have a non-align #[repr(...)] attribute in order to guarantee this type's memory layout
  --> $DIR/enum.rs:45:22
   |
45 | #[derive(FromZeroes, FromBytes)]
   |                      ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only C-like enums can implement FromZeroes
  --> $DIR/enum.rs:56:1
   |
56 | / enum FromZeroes1 {
57 | |
58 | |     A(u8),
59 | | }
   | |_^

error: only C-like enums can implement FromZeroes
  --> $DIR/enum.rs:62:1
   |
62 | / enum FromZeroes2 {
63 | |
64 | |     A,
65 | |     B(u8),
66 | | }
   | |_^

error: FromZeroes only supported on enums with a variant that has a discriminant of `0`
  --> $DIR/enum.rs:69:1
   |
69 | / enum FromZeroes3 {
70 | |
71 | |     A = 1,
72 | |     B,
73 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:80:8
   |
80 | #[repr(C)]
   |        ^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:87:8
   |
87 | #[repr(usize)]
   |        ^^^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:94:8
   |
94 | #[repr(isize)]
   |        ^^^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> $DIR/enum.rs:101:8
    |
101 | #[repr(u32)]
    |        ^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> $DIR/enum.rs:108:8
    |
108 | #[repr(i32)]
    |        ^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> $DIR/enum.rs:115:8
    |
115 | #[repr(u64)]
    |        ^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
   --> $DIR/enum.rs:122:8
    |
122 | #[repr(i64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:133:8
    |
133 | #[repr(C)]
    |        ^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:140:8
    |
140 | #[repr(u16)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:147:8
    |
147 | #[repr(i16)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:154:8
    |
154 | #[repr(u32)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:161:8
    |
161 | #[repr(i32)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:168:8
    |
168 | #[repr(u64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:175:8
    |
175 | #[repr(i64)]
    |        ^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:182:8
    |
182 | #[repr(usize)]
    |        ^^^^^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:189:8
    |
189 | #[repr(isize)]
    |        ^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:196:12
    |
196 | #[repr(u8, align(2))]
    |            ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:203:12
    |
203 | #[repr(i8, align(2))]
    |            ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:210:18
    |
210 | #[repr(align(1), align(2))]
    |                  ^^^^^^^^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:217:8
    |
217 | #[repr(align(2), align(4))]
    |        ^^^^^^^^

error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/enum.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> $DIR/enum.rs:23:8
   |
23 | #[repr(foo)]
   |        ^^^
   |
   = help: valid reprs are `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0566]: conflicting representation hints
  --> $DIR/enum.rs:38:8
   |
38 | #[repr(u8, u16)]
   |        ^^  ^^^
   |
   = note: `#[deny(conflicting_repr_hints)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error: aborting due to 31 previous errors

Some errors have detailed explanations: E0552, E0565, E0566.
For more information about an error, try `rustc --explain E0552`.
